--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ gunicorn==20.1.0
 jmespath==1.0.1
 oauthlib==3.1.1
 Pillow==10.1.0
-psycopg2==2.8.6
+psycopg2-binary==2.9.1
 PyJWT==2.1.0
 python3-openid==3.2.0
 pytz==2021.1
