--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.3.4
+boto==2.49.0
 boto3==1.34.16
 botocore==1.34.16
 cloudinary==1.25.0
@@ -16,6 +17,7 @@ jmespath==1.0.1
 oauthlib==3.1.1
 Pillow==10.1.0
 psycopg2==2.9.5
+psycopg2-binary==2.9.9
 PyJWT==2.1.0
 python3-openid==3.2.0
 pytz==2021.1
